tests/fixtures/fail/region_undeclared_parameter.sc
let read(value: borrow(R)(i32)): i32 = { value }
let main(): i32 = { 42 }
